--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuetify": "^2.2.11",
+    "vuetify-dialog": "^2.0.17",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
