--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-axios": "^3.5.2",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.2.11",
     "vuetify-dialog": "^2.0.17",
     "vuex": "^3.1.2"
